# sparkiot

./: .env.example  .env.vps.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-vps.yml
arduino/SparkIoT/: README.md  keywords.txt  library.properties
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  dashboards.py  demo.py  devices.py  notifications.py  onboarding.py  projects.py  realtime.py  schedules.py  telemetry.py  templates.py  tenant.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: domain.py
backend/app/schemas/: api.py
backend/app/services/: demo_live.py  email.py  mqtt.py  mqtt_bridge.py  plans.py  push.py  realtime.py  schedules.py  telemetry.py
backend/app/worker/: main.py
backend/tests/: test_core.py
docs/: SPARK_IOT_HANDOFF.md  api.md  arduino-library.md  board-testing.md  deployment.md  mqtt-protocol.md  operations.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: spark-push-sw.js
scripts/: board_loop_smoke.py  deploy_vps.sh  package_arduino_library.py  package_release.py
tests/: test_arduino_library_package.py  test_board_loop_smoke_script.py  test_frontend_design_system_contract.py  test_frontend_production_container.py  test_production_compose_hardening.py  test_web_push_service.py
(+49 files in other folders)
