[project]
name = "spark-iot-backend"
version = "0.1.0"
description = "Spark IoT FastAPI modular monolith backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "pydantic-settings==2.7.1",
  "python-jose[cryptography]==3.3.0",
  "passlib[argon2]==1.7.4",
  "python-multipart==0.0.20",
  "paho-mqtt==2.1.0",
  "redis==5.2.1",
  "pywebpush==2.0.3",
  "email-validator==2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "httpx==0.28.1",
  "ruff==0.8.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
